# clairo

./: .env.local.example  .eslintrc.json  .gitignore  .prettierrc  CONTRIBUTING.md  README.md  clairo_github_setup.sh  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 20240701_0001_initial_schema.py  20240702_0001_add_tos_fields_to_users.py  20240703_0001_add_free_analyses_used_to_users.py  20240704_0001_update_subscription_tiers_billing_interval.py  20240705_0001_analyses_language_pair.py  20240706_0001_add_language_preferences_to_users.py  20240708_0001_add_share_links.py  (+2 more)
backend/app/: main.py
backend/tests/: test_analysis.py  test_billing.py  test_clr019_analysis_cache.py  test_clr020_fallback_and_errors.py  test_clr023_history.py  test_clr024_account.py  test_clr025_quota_endpoint.py  test_clr026_billing_endpoints.py  test_clr028_upgrade_flow.py  test_clr029_subscription_management.py  test_clr032_memory_isolation.py  test_clr041_share_links.py  test_clr044_referrals.py  test_clr056_monitoring.py  test_document_type.py  test_file_validation.py  test_health.py  test_jwt_auth.py  test_language_detection.py  test_memory_isolation.py  test_models.py  test_ocr.py  test_prompt_injection.py  test_quota.py  test_rate_limit.py  test_redis.py  test_security_hardening.py
(+171 files in other folders)
