[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clairo-backend"
version = "0.1.0"
description = "Clairo backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis[hiredis]>=5.0.7",
    "boto3>=1.34.144",        # AWS Secrets Manager
    "anthropic>=0.30.0",
    "google-cloud-vision>=3.7.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.2.0",
    "sentry-sdk[fastapi]>=2.7.1",
    "httpx>=0.27.0",          # async HTTP client / test client
    "tenacity>=8.4.2",        # retry logic
    "stripe>=10.1.0",         # subscription billing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.1",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101"]   # allow assert in tests

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::RuntimeWarning:unittest.mock",
]
